2003-02-16  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.11 "cabbage" is released.

2003-02-15  Ben Wing  <ben@xemacs.org>

	* Makefile.in.in (dynodump_deps):
	Don't delete the DOC file.  Implement quick-building here: not
	building the DOC file unless it doesn't exist, as the quick-build
	docs say.

	* config.h.in: Style changes.  Add HAVE_XLIKE.
	* emacs.c (main_1):
	* emacs.c (main):
	* emacs.c (Fdump_emacs):
	* emacs.c (voodoo_free_hook):
	* emacs.c (Fkill_emacs):
	* emacs.c (assert_failed):
	* emacs.c (vars_of_emacs):
	* emacs.c (__sti__iflPNGFile_c___):
	Nothing but niggly spacing changes -- one space before a paren
	starting a function-call arglist, please.

	* make-src-depend:
	When QUICK_BUILD, don't put lisp.h, config.h, and related as
	dependencies of all source files, so that changes to these files
	don't trigger total rebuilding of the src directory.
	Update info on what's a GTK-only and X-only file and use HAVE_XLIKE
	for files shared between GTK and X.

2003-02-14  Ben Wing  <ben@xemacs.org>

	* buffer.c:
	* syntax.c:
	Move syntax table description from buffer.c to syntax.c.
	
	* chartab.c:
	* chartab.c (set_char_table_dirty):
	* chartab.c (fill_char_table):
	* chartab.c (Fmake_char_table):
	* chartab.c (Fcopy_char_table):
	* chartab.c (get_range_char_table_1):
	* chartab.c (get_range_char_table):
	* chartab.c (put_char_table):
	* chartab.h:
	* chartab.h (struct Lisp_Char_Table):
	Free extra char table entries to avoid excessive garbage.
	Add flags for dirty and mirror_table_p to char tables.
	Add a back pointer from mirror tables to the original syntax table.
	When modifying a syntax table, don't update the mirror table right
	away, just mark as dirty.
	Add various asserts to make sure we are dealing with the right type
	of table (mirror or non-mirror).
	
	* font-lock.c:
	* font-lock.c (find_context):
	* syntax.c (init_syntax_cache):
	* syntax.c (setup_syntax_cache):
	* syntax.c (mark_buffer_syntax_cache):